Fix spacing on containers and make button text more informative

--- a/public/devfair/index_files/main.css
+++ b/public/devfair/index_files/main.css
@@ -1016,6 +1016,7 @@ button:disabled,
 /* Header */
 .vertical-space {
   margin-top: 10px;
+  margin-bottom: 30px;
 }
 
 #header h1 {
